inicio de comit

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     Veni a conocer nuestro patio cervecero y no te pierdas nuestros increibles sabores.
                     Proba nuestra extensa variedad de cervezas artesanales acompañada de nuestras deliciosas entradas y
                     platos fuertes.
-                    Disfruta de nuestra buena musica y shows wn vivo con los mejores artistas locales y no te podes
+                    Disfruta de nuestra buena music y shows wn vivo con los mejores artistas locales y no te podes
                     perder nuestras noches de stand up. ¡¡ Pura diversion !!.
                     Veni a disfrutar en familia , tambien contamos con menús infantiles y sala de juegos para los mas
                     pequeños..
