se guarda todos los sitios

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     Disfruta de nuestra buena musica y shows wn vivo con los mejores artistas locales y no te podes
                     perder nuestras noches de stand up. ¡¡ Pura diversion !!.
                     Veni a disfrutar en familia , tambien contamos con menús infantiles y sala de juegos para los mas
-                    pequeños..
+                    pequeños.
                 </p>
             </div>
 
