se modifica videos de pagina de eventos

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -52,23 +52,26 @@
                 Artistas locales nos brindan sus mejores shows para el deleite de sus espectadores, acompañados de
                 una puesta en escena y sonido exepcional.
             </p>
-            <figure class=>
-                <iframe class="iframe__vid1" width="560" height="315" src="https://www.youtube.com/embed/I5EC0Hryn80"
+            <div>
+                <iframe class=" ratio ratio-16x9 iframe__vid1" width="560" height="315" src="https://www.youtube.com/embed/I5EC0Hryn80"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
                 <figcaption class="figcaption__event">Algo de lo que fue una de nuestras presentaciones en nuestro bar
                 </figcaption>
             </figure>
+        </div>
 
             <section class="section__boots">
                 <div class="row align-items-center animate__animated animate__bounceInRight">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
 
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/pVzPiUhgfco"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
+                        <div class="ratio ratio-16x9">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pVzPiUhgfco"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
+                        </div>
 
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -77,20 +80,43 @@
                             ¿Tenes buen humor?, ¿haces reir a tus amigos?, ¿sos el alma de la fiesta?, veni a compartir
                             ese
                             talento con nosotros.
-
                             En nuestras noches de Stand Up nadie se queda afuera.Contamos con un escenario totalmente
                             abierto al
                             publico.
-
                             Humoristas conocidos y amateur nos comparten sus mejores monologos para no parar de reir,
                             veni a
                             compartir tus risas con nosotros.
                         </p>
-
                         </p>
                     </div>
                 </div>
             </section>
+            <section>
+                <h3> Sorteos y Promociones</h3>
+                <p>
+                    Participa de nuestros increibles sorteos. Con tu compra te llevas un numero el cual participa de
+                    diversos premios que sorteamos en el transcurso de la noche .
+                    Podes llevarte cenas para vos y 3 amigos ¡todo incluido!, tambien pintas, tragos , y hasta una
+                    canilla libre de nuestras mejores cervezas para que festejes lo que quieras con nosotros. ¿Te lo vas
+                    a perder?..
+                </p>
+            </section>
+
+
+            <div class="row">
+                <footer class="py-3 my-4">
+                    <h4>Seguinos en nuestras redes sociales</h4>
+                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                        <li class="nav-item"><a href="https://es-la.facebook.com/"
+                                class="nav-link px-2 text-muted">Facebook: Cita Con La
+                                Birra</a></li>
+                        <li class="nav-item"><a href="https://www.instagram.com/"
+                                class="nav-link px-2 text-muted">Instagram:
+                                @citaconlabirra_ok</a></li>
+                    </ul>
+                </footer>
+            </div>
+
 
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
