se modifica pagina reservas

--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -38,6 +38,12 @@
                     de tus invitados. <br>
                     Hace tu reserva con tiempo y veni a disfrutar con nosotros.
                 </p>
+                <p class="parrafo-presentacion">
+                    Festeja con nosotros todos tus eventos , desde tu cumpleaños y hasta una reunion laboral. <br>
+                    Siempre con la mejor atencion y la disponibilidad de nuestros mejores espacios para tu disfrute y el
+                    de tus invitados. <br>
+                    Hace tu reserva con tiempo y veni a disfrutar con nosotros.
+                </p>
                 <figure>
                     <img src="/images/reservas-proyect.jpg" alt="">
                 </figure>
