--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             crossorigin="anonymous" />
         <!-- Animaciones-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="./css/style.css" />
     </head>
 
 
@@ -33,16 +33,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/quienes-somos.html">Quienes Somos</a>
+                                <a class="nav-link" href="./pages/quienes-somos.html">Quienes Somos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/eventos.html">Eventos</a>
+                                <a class="nav-link" href="./pages/eventos.html">Eventos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/reservas.html">Reservas</a>
+                                <a class="nav-link" href="./pages/reservas.html">Reservas</a>
                             </li>
                         </ul>
                     </div>
@@ -103,7 +103,7 @@
 
             <div class="row align-items-center animate__animated animate__bounceInRight">
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <img src="/images/citaconlabirra3-proyect.jpeg" class=" foto_1 img-fluid" alt="Image" />
+                    <img src="./images/citaconlabirra3-proyect.jpeg" class=" foto_1 img-fluid" alt="Image" />
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <h1 class="display-3 text-center">Nuestra Terraza</h1>
@@ -134,7 +134,7 @@
                     </form>
                 </div>
                 <div class="col-sm-12 col-md-9 col-lg-9 col-xl-9 mt-3">
-                    <img src="/images/citaconlabirra1-proyect.jpg" class=" foto_2 img-fluid" alt="Image" />
+                    <img src="./images/citaconlabirra1-proyect.jpg" class=" foto_2 img-fluid" alt="Image" />
                 </div>
             </div>
 
