--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -25,16 +25,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/eventos.html">Eventos</a>
+                            <a class="nav-link" href="./pages/eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/reservas.html">Reservas</a>
+                            <a class="nav-link" href="./pages/reservas.html">Reservas</a>
                         </li>
                     </ul>
                 </div>
@@ -71,7 +71,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <img class="  foto_3 img-fluid rounded mx-auto d-block" src="/images/bar-bootstrap.jpg"
+                                <img class="  foto_3 img-fluid rounded mx-auto d-block" src="./images/bar-bootstrap.jpg"
                                     alt="">
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                 <section class="section__boots">
                     <div class="row align-items-center animate__animated animate__bounceInRight">
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                            <img src="/images/birras-hamburguesas-boot.jpg" class=" foto-3 img-fluid" alt="Image" />
+                            <img src="./images/birras-hamburguesas-boot.jpg" class=" foto-3 img-fluid" alt="Image" />
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                             <h1 class="display-3 text-center">Nuestros Productos</h1>
