se cambia una imagen

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -81,7 +81,7 @@
                 <section class="section__boots">
                     <div class="row align-items-center animate__animated animate__bounceInRight">
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                            <img src="./images/birras-hamburguesas-boot.jpg" class=" foto-3 img-fluid" alt="Image" />
+                            <img src="../images/birras-hamburguesas-boot.jpg" class=" foto-3 img-fluid" alt="Image" />
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                             <h1 class="display-3 text-center">Nuestros Productos</h1>
