se agragas nuevas rutas en 3 paginas eventos , contacto y reservas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,9 +17,9 @@
         <nav>
             <ul class="nav-lista">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="/pages/eventos.html">Nuestros eventos</a></li>
-                <li><a href="/pages/quienes-somos.html">Quienes somos</a></li>
-                <li><a href="/pages/reservas.html">Reservas</a></li>
+                <li><a href="./pages/eventos.html">Nuestros eventos</a></li>
+                <li><a href="./pages/quienes-somos.html">Quienes somos</a></li>
+                <li><a href="./pages/reservas.html">Reservas</a></li>
             </ul>
         </nav>
 
