--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/quienes-somos.html">Quienes Somos</a>
+                            <a class="nav-link" href="./pages/quienes-somos.html">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/reservas.html">Reservas</a>
+                            <a class="nav-link" href="./pages/reservas.html">Reservas</a>
                         </li>
                     </ul>
                 </div>
