--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -19,9 +19,9 @@
             <nav>
                 <ul class="nav-lista">
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="/pages/quienes-somos.html">Quienes Somos</a></li>
-                    <li><a href="/pages/eventos.html">Nuestros eventos</a></li>
-                    <li><a href="/pages/contacto.html">Contacto</a></li>
+                    <li><a href="./pages/quienes-somos.html">Quienes Somos</a></li>
+                    <li><a href="./pages/eventos.html">Nuestros eventos</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
