se realizan cambios en rutas de paginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
         <nav>
             <ul class="nav-lista">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./pages/eventos.html">Nuestros eventos</a></li>
+                <li><a href="./eventos.html">Nuestros eventos</a></li>
                 <li><a href="./pages/quienes-somos.html">Quienes somos</a></li>
                 <li><a href="./pages/reservas.html">Reservas</a></li>
             </ul>
