--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="">Home</a>
+                    <a class="navbar-brand" href="/index.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -33,16 +33,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/quienes-somos.html">Quienes Somos</a>
+                                <a class="nav-link" href="/pages/quienes-somos.html">Quienes Somos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./pages/eventos.html">Eventos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/reservas.html">Reservas</a>
+                                <a class="nav-link" href="/pages/reservas.html">Reservas</a>
                             </li>
                         </ul>
                     </div>
