--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/quienes-somos.html">Quienes Somos</a>
+                                <a class="nav-link" href=".//pages/quienes-somos.html">Quienes Somos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/eventos.html">Eventos</a>
+                                <a class="nav-link" href="./pages/eventos">Eventos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/reservas.html">Reservas</a>
+                                <a class="nav-link" href="./reservas.html">Reservas</a>
                             </li>
                         </ul>
                     </div>
