--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,32 +10,48 @@
 </head>
 
 <body>
-
-
-    <header class="header">
-        <h1 class="titulo-principal">Contactanos</h1>
-        <nav>
-            <ul class="nav-lista">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./eventos.html">Nuestros eventos</a></li>
-                <li><a href="./pages/quienes-somos.html">Quienes somos</a></li>
-                <li><a href="./pages/reservas.html">Reservas</a></li>
-            </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./contacto.html">Contacto</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/quienes-somos.html">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/eventos.html">Eventos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./reservas.html">Reservas</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
+    </header>
 
 
     </header>
     <main>
         <section>
-            <h2 class="titulo2">Conversa con nosotros</h2>
-            <article>
-                <p class="parrafo-presentacion">
-                    Encontranos en todas nuestras <a href="#redes-sociales">redes sociales</a> , Facebook ,Instagram y
-                    Twitter.
-                    O dejanos tus consultas aqui, responderemos tus dudas al instante. <br>
-                    Tambien podes contactarnos mediante mje de whattsap. <br>
-                </p>
-            </article>
+           
+ <article>
+    <p class="parrafo-presentacion">
+        Encontranos en todas nuestras <a href="#redes-sociales">redes sociales</a> , Facebook ,Instagram y
+        Twitter.
+        O dejanos tus consultas aqui, responderemos tus dudas al instante. <br>
+        Tambien podes contactarnos mediante mje de whattsap. <br>
+    </p>
+</article>
+
             <ul>
                 <li>whattsap: 0351-153576942 <a href="https://web.whatsapp.com/" target="_blank">Iniciar chat</a></li>
             </ul>
