se trabaja sobre paginas reservas y contactos, agregando nuevos formularios

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Nuestras cervezas</h5>
                             <p class="card-text">Contamos con la mas exquisita variedad de cervezas artesanales,
-                                aprovecha la promo en happy hours.Todas al 2x1.</p>
+                                aprovecha la promo en happy hours.Todas al 2x1.De lunes a viernes.</p>
                             <a href="" class="btn btn-info">Ver promocion</a>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
             </ul>
         </footer>
     </div>
-    </div>
+    
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -177,4 +177,3 @@
 
 
 
-</html>
