--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <!-- Animaciones-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
 </head>
@@ -108,14 +113,25 @@
 
 
 
-    <footer id="redes-sociales" class="nav-footer">
-        <h4>Seguinos en nuestras redes sociales</h4>
-        <ul>
-            <li> Facebook: Cita con la birra bar</li>
-            <li>Instagram: @citaconlabirra_ok</li>
-            <li>Twitter: @citaconlabirra_bar</li>
-        </ul>
-    </footer>
+    <div class="row">
+        <footer class="py-3 my-4">
+            <h4>Seguinos en nuestras redes sociales</h4>
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="https://es-la.facebook.com/" class="nav-link px-2 text-muted">Facebook:
+                        Cita Con La
+                        Birra</a></li>
+                <li class="nav-item"><a href="https://www.instagram.com/" class="nav-link px-2 text-muted">Instagram:
+                        @citaconlabirra_ok</a></li>
+            </ul>
+        </footer>
+    </div>
+
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+
 
 
 
