se trabaja sobre pagina de reservas agregando animacion y textos

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -77,7 +77,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <img class="  foto_3 img-fluid rounded mx-auto d-block "
+                                <img class="  foto_3 img-fluid rounded mx-auto d-block animate__animated animate__rubberBand"
                                     src="../images/bar-ficticio.jpg" alt=" foto exterior del bar">
                             </div>
                         </div>
