--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </form>
                 </div>
                 <div class="col-sm-12 col-md-9 col-lg-9 col-xl-9 mt-3">
-                    <img src="./images/citaconlabirra1-proyect.jpg" class=" foto_2 img-fluid" alt="Image" />
+                    <img src="./images/citaconlabirra1-proyect.jpg" class=" foto_2 img-fluid" alt="foto de la terraza" />
                 </div>
             </div>
         </section>
